src/css/base.sass
$red: #e74c3c
$grey: #333333

$twitter: #00aced
$facebook: #3b5998
$googleplus: #dd4b39
$linkedin: #007bb6
$instagram: #7A45B7
$dribbble: #ea4c89

$menuBg: lighten($red, 10%)

.lightskyblue-bg
  background:  MediumTurquoise

.red-bg
  background: $red

.royalblue-bg
  background: royalblue

.blueviolet-bg
    background: blueviolet

.red
  color: $red

.text-link
  color: $red
  border-bottom: 2px solid $red
  font:
    weight: 400

\:root
  font:
    size: 20px

  @media screen and (max-width: 768px)
    font:
      size: 18px

  @media screen and (max-width: 380px)
    font:
      size: 14px

/* apply a natural box layout model to all elements, but allowing components to change - read more @ http://www.paulirish.com/2012/box-sizing-border-box-ftw/*/
html
  box-sizing: border-box

*, *:after, *:before
  box-sizing: inherit

body
  margin: 0
  padding: 0
  color: $grey
  font:
    family: 'lato', sans-serif
    weight: 300

h1, h2, h3, h4, h5
  margin: 0
  color: white
  font:
    family: 'lato', sans-serif

h2
  font:
    weight: bold

  @media screen and (max-width: 480px)
    font-size: 1.8rem

h5
  font:
    size: .8rem
    weight: 500

a
  text-decoration: none

p
  font-size: 1rem

  @media screen and (max-width: 480px)
    font-size: 1.3rem

// .hamburger-menu
//   width: 1.5rem
//   height: 1.1rem
//   position: fixed
//   top: calc(1rem - 1rem / 2)
//   right: 1rem
//   display: flex
//   align-items: center
//   z-index: 5
//   cursor: pointer
//   transition: all .2s ease-in-out
//
//   &:hover
//     span, span:after, span:before
//       transition: all .2s ease-in-out
//       background: lighten($red, 20%)
//
//   &.nav-is-open
//     width: 1.4rem
//     height: 1rem
//     span
//       background: transparent
//
//       &:before, &:after
//         top: calc(25% + .24rem)
//         transform-origin: center
//       &:before
//         transform: rotate(45deg)
//       &:after
//         transform: rotate(-45deg)
//
//   span
//     width: 100%
//     height: .24rem
//     background: lighten($red, 10%)
//     display: block
//
//     &:before, &:after
//       content: ''
//       width: 100%
//       height: .2rem
//       background: lighten($red, 10%)
//       position: absolute
//
//     &:before
//       top: 0
//     &:after
//       bottom: 0

.hamburger
  right: .75rem
  top: .2rem
  display: flex
  flex-direction: column
  justify-content: center
  cursor: pointer
  -webkit-user-select: none
  -moz-user-select: none
  -ms-user-select: none
  position: fixed
  z-index: 5

  .top-bar,
  .bottom-bar
    margin: auto
    display: block
    position: relative
    width: 100%
    height: .2rem
    background: $menuBg
    transition: all .45s cubic-bezier(0.45,-0.07, 0.47, 1.71)
    top: 0

  .top-bar
    &.nav-is-open
      top: .8rem
      transform: rotate(45deg)
      width: 60%

  .bottom-bar
    &.nav-is-open
      top: -.55rem
      transform: rotate(-45deg)
      width: 60%

  span
    text-align: center
    display: block
    position: relative
    color: $menuBg
    font-weight: bold
    width: 100%
    cursor: pointer
    transition: all .25s cubic-bezier(0.45,-0.07, 0.47, 1.71)
    -webkit-user-select: none
    -moz-user-select: none
    -ms-user-select: none

    &.nav-is-open
      opacity: 0
      transform: translateX(10px)

.nav-container
  position: absolute

.main-nav

nav
  width: 100%
  padding: .5rem 10%
  position: fixed
  top: 0
  display: flex
  justify-content: flex-end
  z-index: 4
  transition: all .15s ease-in-out
  transform: translateY(-100%)
  opacity: 0
  &.isShowing
    transform: translateY(0)
    opacity: 1

  ul
    list-style: none
    margin: 0
    padding: 0
    li
      display: inline-block
      padding: 0 1.8rem 0 0
      &:last-child
        padding: 0

      a
        color: lighten($red, 15%)
        transition: all .15s ease-in-out
        &:hover
          color: lighten($red, 20%)

.btn
  display: inline-block
  background: white
  border-radius: .3rem
  padding: .6rem 2.4rem
  color: $red
  cursor: pointer
  font:
    family: 'lato', sans-serif
    weight: 900
  transition: all .25s ease-in-out

  &:hover
    background: #eee
    box-shadow: .2rem .2rem 1rem rgba(34, 34, 34, .5)

